helm-repo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: habit-platform-route
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    backendRefs:
    - name: auth-service-svc
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /habit
    backendRefs:
    - name: habit-service-svc
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /journal
    backendRefs:
    - name: journal-service-svc
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /notify
    backendRefs:
    - name: notification-service-svc
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-svc
      port: 80
